# forne

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bonnie.toml
.github/workflows/: cd.yml
common_adapters/: README.md  arrow_separator.rhai
src/: adapters.rs  driver.rs  lib.rs  list.rs  main.rs  set.rs
src/adapters/: README.md  mod.rs
src/methods/: README.md  mod.rs  sm-2.rhai  speed-v1.rhai
tests/: output.json  test.txt
