[package]
name = "california"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
termcolor = "1"
lazy_static = "1"
