[package]
name = "forne"
version = "0.1.0"
edition = "2021"
description = "A Turing-complete but dead-simple spaced repetition CLI that helps you learn stuff."
authors = ["arctic-hen7 <arctic.hen@pm.me>"]
license = "MIT"
repository = "https://github.com/arctic-hen7/forne"
readme = "README.md"
keywords = ["learning", "spaced-repetition", "cli", "education"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
lazy_static = "1"
rhai = { version = "1.14.0", features = ["serde", "sync"] }
include_dir = "0.7.3"
uuid = { version = "1.3.2", features = ["v4", "serde"] }

# CLI-only dependencies
termcolor = { version = "1", optional = true }
clap = { version = "4.2.7", features = ["derive"], optional = true }
whoami = { version = "1.4.0", optional = true }
crossterm = { version = "0.26", optional = true }

[lib]
name = "forne"
path = "src/lib.rs"

[[bin]]
name = "forne"
path = "src/bin/main.rs"

[features]
default = [ "cli" ] # Necessary because we can't have binary-only features
# Enable dependencies and features for the CLI only. This unfortunately has to pollute the library, because Cargo does not support
# separate binary dependencies.
cli = ["clap", "whoami", "termcolor", "crossterm"]
